# weather-test-app

./: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: fetch_html.js  main.rs
src/lib/: utils.ts
